--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-.whole-list{
+.container {
+    max-width: 600px;
     margin: auto;
-    max-width: 40%;
-    padding:30px;
+}
+
+
+.whole-list{
+    width: 100%;
+    padding: 30px 0;
     background-color:rgb(241, 240, 240);
-    position: relative;
     border-radius: 20px;
 }
 
@@ -18,8 +22,7 @@
     padding: 20px;
     min-height: 200px; 
     border-radius: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin: 0 60px;
     border-style: solid;
     border-width: 1px;
 }
@@ -32,13 +35,13 @@
     border-bottom-style: solid;
     border-bottom-width: 1px;
     display: block;
-    width: 80%;
-    margin: auto;
+    width: 70%;
+    margin: 20px auto;
 }
 
 .buttons{
     margin: auto;
-    max-width: 40%;
+    width: 100%;
     display: flex;
     justify-content: space-around;
 }
